--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+html {background-color: #3c3838; color: white}
+div {background-color: #3c3838;  color: white}
