--- a/src/app/components/typing-space/typing-space.component.html
+++ b/src/app/components/typing-space/typing-space.component.html
@@ -1,6 +1,22 @@
 <div class="container-fluid d-flex align-items-center" style="height: 90vh;">
     <div class="row w-100">
-        <!-- <div class="col-6 offset-3 text-center">The timer is going to go here</div> -->
-        <div class="col-6 offset-3 text-center" style="font-size: 1.5rem;">{{this.letters.toString().replaceAll(",", " &#8901; ")}}</div>
+        <div class="col-6 offset-3 text-center" style="font-size: 2rem;">
+            <span *ngFor="let char of testArr; let i = index" 
+                  [ngClass]="{'correct': correctStatus[i], 'incorrect': correctStatus[i] === false}">
+              {{char}}
+            </span>
+          </div>
+          <div class="col-6 offset-3 text-center" style="padding-top: 2vh;">
+            <input type="text" style="width: 30vw;" placeholder="Start typing to get started" (keydown)="onInput($event)">
+          </div>
+        <div class="col-6 offset-3 text-center" style="padding-top: 2vh;">
+            {{this.totalKeysPressed}}
+            {{this.prevChar}}
+            {{this.currChar}}
+        </div>
+        <div class="col-6 offset-3 text-center" style="padding-top: 2vh;">
+            {{this.correctKeys}}
+            {{this.accuracy}}
+        </div>
     </div>
 </div>
