timer + speed calc added. Stats bar finally consistent on page refresh and instance reload

--- a/src/app/components/typing-space/typing-space.component.css
+++ b/src/app/components/typing-space/typing-space.component.css
@@ -5,3 +5,10 @@
 .incorrect{
     color: red
 }
+
+.stats-span{
+    display: inline-block;
+    text-align: center;
+    width: 13ch;
+    min-width: 13ch;
+}
