code cleanup + placeholder header + bootstrap icons added

--- a/src/app/components/typing-space/typing-space.component.css
+++ b/src/app/components/typing-space/typing-space.component.css
@@ -12,3 +12,17 @@
     width: 25ch;
     min-width: 13ch;
 }
+
+.stats-bar{
+    font-size: 1rem;
+    padding-bottom: 1vh;
+    text-align: center;
+}
+
+.title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
