--- a/src/app/components/typing-space/typing-space.component.html
+++ b/src/app/components/typing-space/typing-space.component.html
@@ -1,6 +1,6 @@
 <div class="title">
   <span style="text-align: center; flex-grow: 1;">TyperV1</span>
-  <span style="cursor: pointer;">Login&nbsp;<span class="bi bi-box-arrow-in-right"></span></span>
+  <span style="cursor: pointer;"><nav><a routerLink="/Login" style="color: white;">Login&nbsp;<span class="bi bi-box-arrow-in-right"></span></a></nav></span>
 </div>
 <hr style="margin: 0;">
 <div class="container-fluid d-flex align-items-center" style="height: 90vh; padding-bottom: 5vh;">
