added registration functions and confirmed app is working with CORS

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,6 +11,7 @@
                 <input id="loginPassword" type="password" class="form-control" [(ngModel)]="password">
                 <label for="loginPassword">Password</label>
             </div>
+            <button (click)="login()" type="button" class="btn btn-light">Login</button>
         </div>
 
         <div class="col-1 d-flex justify-content-center">
