--- a/src/app/components/typing-space/typing-space.component.html
+++ b/src/app/components/typing-space/typing-space.component.html
@@ -35,15 +35,13 @@
           {{ speed === 'Infinitycpm' || speed === 'N/A' ? placeholderSpeed : speed }}
         </span>
       </div>
-        <div class="col-6 offset-3 text-center" style="font-size: 2rem; padding-top: 2vh;">
-            <span *ngFor="let char of testArr; let i = index" 
-                  [ngClass]="{'correct': correctStatus[i], 'incorrect': correctStatus[i] === false}">
-              {{char}}
-              <span *ngIf="i < testArr.length - 1">&#8901;</span>
-            </span>
-          </div>
-          <div class="col-6 offset-3 text-center" style="padding-top: 3vh;">
-            <input #textInput type="text" style="width: 30vw;" placeholder="Start typing to get started" (keydown)="onInput($event)">
-          </div>
+      <div #textInput class="col-6 offset-3 text-center" tabindex="0" (keydown)="onInput($event)" style="font-size: 2rem; padding-top: 2vh;">        
+        <span *ngFor="let char of testArr; let i = index">
+          <span *ngIf="i == currIndex" class="cursor"></span><span class="zero-width"></span>
+          <span [ngClass]="{'correct': correctStatus[i], 'incorrect': correctStatus[i] === false}">
+            {{char}}
+          </span>
+      </span>
+      </div>
     </div>
 </div>
