finished up words + accuracy

--- a/src/app/components/word-typing-space/word-typing-space.component.html
+++ b/src/app/components/word-typing-space/word-typing-space.component.html
@@ -15,7 +15,7 @@
             </span>
             Accuracy:&ensp;
             <span class="stats-span">
-              {{this.totalAccuracy.toFixed(2) + "%"}}
+              {{(this.totalAccuracy * 100).toFixed(2) + "%"}}
             </span>
             &emsp;Speed:&ensp;
             <span class="stats-span">
