--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -8,4 +8,13 @@
 
 a{
     text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: aqua;
+}
+
+.spanHover span:hover{
+    color: aqua
 }
