--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,40 @@ div {background-color: #3c3838;  color: white; font-family: 'Courier New', Couri
     text-align: center;
 }
 
+.btn-plain-text{
+    background: none;
+    border: none;
+    padding: 0;
+    color: inherit;
+    cursor: pointer;
+}
+
+.btn-plain-text:hover{
+    color: aqua;
+}
+
+.blurred{
+    filter: blur(.35rem);
+}
+
+.focusText{
+    font-size: 1rem;
+    position: absolute;
+    background: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+}
+
+.textWrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
 .cursor{
     display: inline-block;
     width: 1px; 
@@ -37,7 +71,7 @@ div {background-color: #3c3838;  color: white; font-family: 'Courier New', Couri
     display: inline-block;
     width: 1px; 
     height: 1em; 
-    visibility: hidden; /* Keep space without displaying for cursor */
+    visibility: hidden; /** cursor placeholder **/
 }
 
 @keyframes blink {
