--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,43 @@
-<div class="title">
-    @if(!isLoggedIn()) {
-        <span style="text-align: center; flex-grow: 1;"><nav><a routerLink="/Home">TyperV1</a></nav></span>
-        <span style="cursor: pointer;"><nav><a routerLink="/Login">Login&nbsp;<span class="bi bi-box-arrow-in-left"></span></a></nav></span>
-    }
-    @else{
-        <span>{{getUsername()}}</span>
-        <span style="text-align: center; flex-grow: 1;"><nav><a routerLink="/Home">TyperV1</a></nav></span>
-        <div class="spanHover"><span style="cursor: pointer;" (click)="logout()">Logout&nbsp;<span class="bi bi-box-arrow-in-right"></span></span></div>
-    }
-</div>
-<hr style="margin: 0;">
+<nav class="navbar navbar-expand-lg" style="padding: 0;">
+    <div class="container-fluid">
+        <a class="navbar-brand" routerLink="/Home">TyperV1</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" routerLink="/Home/Words">Words</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="Home/Characters">Characters</a>
+              </li>
+              @if(isLoggedIn()) {
+                <li class="nav-item dropdown">
+                    <div class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      {{getUsername()}}
+                    </div>
+                    <ul class="dropdown-menu dropItem">
+                      <li><div class="dropdown-item" style="cursor: pointer;">Settings</div></li>
+                      <li><div class="dropdown-item" style="cursor: pointer;" (click)="logout()">Logout</div></li>
+                    </ul>
+                </li>
+              }
+            </ul>
+            <ul class="navbar-nav ms-auto">
+                @if(!isLoggedIn()) {
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/Login">Login<span class="bi bi-box-arrow-in-left" style="padding-left: .5ch;"></span></a>
+                  </li>
+                }
+                @else {
+                  <li class="nav-item">
+                    <a class="nav-link" style="cursor: pointer" (click)="logout()">Logout<span class="bi bi-box-arrow-in-right" style="padding-left: .5ch;"></span></a>
+                  </li>
+                }
+              </ul>
+            </div>
+    </div>
+</nav>
+<hr style="margin: 0; opacity: .5;">
 
