--- a/src/styles.css
+++ b/src/styles.css
@@ -60,10 +60,19 @@ div {background-color: #3c3838;  color: white; font-family: 'Courier New', Couri
     width: 1px; 
     background-color: white;
     height: 1em;
-    animation: blink .75s step-end infinite;
+    animation: blink 1s step-end infinite;
     position: relative;
     vertical-align: middle;
     margin-left: 1px;
 }
+
+@keyframes blink {
+    0%, 100% {
+      opacity: 1;   /* Cursor visible */
+    }
+    50% {
+      opacity: 0;   /* Cursor hidden */
+    }
+  }
 
 
