Made some very minor changes. Added some symbols to the navbar instead of text + created profile component to implement at a later time

--- a/src/app/components/word-typing-space/word-typing-space.component.html
+++ b/src/app/components/word-typing-space/word-typing-space.component.html
@@ -3,6 +3,7 @@
       <div class="col-8 offset-2 stats-bar">
           <button class="btn-plain-text"
            type="button"
+           style="color: white"
            data-bs-toggle="collapse"
            data-bs-target="#scoreSpan" 
            aria-expanded="true"
