--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" routerLink="/Home/Words">Words</a>
+                <a class="nav-link" aria-current="page" routerLink="/Home/Words"><i class="bi bi-keyboard"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="Home/Characters">Characters</a>
+                <a class="nav-link" routerLink="Settings"><i class="bi bi-gear-fill"></i></a>
               </li>
               @if(isLoggedIn()) {
                 <li class="nav-item dropdown">
@@ -18,7 +18,7 @@
                       {{getUsername()}}
                     </div>
                     <ul class="dropdown-menu dropItem">
-                      <li><div class="dropdown-item" style="cursor: pointer;">Settings</div></li>
+                      <li><div class="dropdown-item" routerLink="Profile" style="cursor: pointer;">Profile</div></li>
                       <li><div class="dropdown-item" style="cursor: pointer;" (click)="logout()">Logout</div></li>
                     </ul>
                 </li>
@@ -32,7 +32,8 @@
                 }
                 @else {
                   <li class="nav-item">
-                    <a class="nav-link" style="cursor: pointer" (click)="logout()">Logout<span class="bi bi-box-arrow-in-right" style="padding-left: .5ch;"></span></a>
+                    <!-- logout button need pointer style to function for some reason -->
+                    <a class="nav-link" style="cursor: pointer;" (click)="logout()">Logout<span class="bi bi-box-arrow-in-right" style="padding-left: .5ch;"></span></a>
                   </li>
                 }
               </ul>
