--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,50 @@
-<p>profile works!</p>
+<div class="container">
+    <div class="row justify-content-around">
+      <div class="col-4 align-self-center">
+        <div class="row text-center">
+          <div class="col align-self-center" style="padding-top: 5%; padding-bottom: 5%;">
+            @if(getUser().image != undefined){
+              <img style="border-radius: 100%; height: 40%; width: 40%;" [src]="imgUrl">
+            }
+          <h3 style="padding-top: 5%;">{{getUser().userName}}</h3>
+          </div>
+          <div class="col align-self-center" style="border-right: solid rgb(54, 53, 53) 3px;">
+            <div class="row" style="padding-bottom: 10%;">
+              Time Spent Typing:<br>{{userStats.timeTyped}}
+            </div>
+            <div class="row">
+              Total Keys Typed:<br>{{userStats.charsTyped}}
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="StatsSection" class="col-6 align-self-center" style="margin-right: 10%">
+        <div class="row text-center">
+          <div class="col">
+            Avg. Speed:<br>{{userStats.wpm}} wpm
+          </div>
+          <div class="col">
+            Top Speed:<br>{{userStats.topWpm}} wpm
+          </div>
+          <div class="col">
+            Avg. Acc:<br>{{userStats.accuracy}}%
+          </div>
+          <div class="col">
+            Top Acc:<br>{{userStats.topAccuracy}}%
+          </div>
+        </div>
+          </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-8 align-self-center">
+        <div style="text-align: center;">
+          <u>Recent Tests</u>
+        </div>
+        <div class="scrollContainer">
+          <app-user-test></app-user-test>
+        </div>
+      </div>  
+    </div>
+  </div>
