--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,6 @@
-body {
-    background-color: rgb(27, 27, 27);
-}
-
-html {
-    color: white;
-    background-color: rgb(27, 27, 27);
+html, body {
+    color: white !important;
+    background-color: rgb(27, 27, 27) !important;
 }
 
 div {
